--- a/src/RabbitSample.Consumer/RabbitSample.Consumer.csproj
+++ b/src/RabbitSample.Consumer/RabbitSample.Consumer.csproj
@@ -4,5 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="RabbitMQ.Client" Version="6.1.0" />
+    </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\RabbitSample.Util\RabbitSample.Util.csproj" />
+    </ItemGroup>
+    
 </Project>
