--- a/src/RabbitSample.Util/RabbitSample.Util.csproj
+++ b/src/RabbitSample.Util/RabbitSample.Util.csproj
@@ -1,22 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="Messages\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Remove="Messages\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Messages\**" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
+      <PackageReference Include="Polly" Version="7.2.1" />
       <PackageReference Include="RabbitMQ.Client" Version="6.1.0" />
     </ItemGroup>
 
